--- a/package.json
+++ b/package.json
@@ -2,28 +2,29 @@
   "name": "doyouwannabook-v2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "react-scripts test",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "client": "react-scripts start",
+    "server": "nodemon ./server/app.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+  "proxy": "http://localhost:8001/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shinsojeong/DoYouWannaBook-v2.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/shinsojeong/DoYouWannaBook-v2/issues"
-  },
-  "homepage": "https://github.com/shinsojeong/DoYouWannaBook-v2#readme",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "concurrently": "^6.2.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -31,15 +32,21 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.38.1",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
+    "upgrade": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
