--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-kakao": "^1.0.1",
