--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "client": "react-scripts start",
-    "server": "nodemon ./server/app.js",
+    "server": "nodemon ./server/app.js --ignore sessions/*",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "proxy": "http://localhost:8001/",
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "concurrently": "^6.2.1",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -41,6 +42,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redis": "^3.1.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
