--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,28 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "images/192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "images/512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
+  "shortcuts": [
+    {
+      "name": "DoYou Wanna Book",
+      "short_name": "DYWB",
+      "description": "DoYou Wanna Book",
+      "url": "./",
+      "icons": [{ "src": "images/192x192.png", "sizes": "192x192" }]
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait",
+  "theme_color": "#77d82d",
+  "background_color": "#77d82d"
 }
