--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "client": "react-scripts start",
     "server": "nodemon ./server/app.js --ignore sessions/*",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "react-scripts build"
   },
   "proxy": "http://localhost:8001/",
   "repository": {
@@ -55,6 +56,8 @@
     "sass": "^1.38.1",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
+    "socket.io": "^4.3.2",
+    "socket.io-client": "^4.3.2",
     "upgrade": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
@@ -75,5 +78,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://doyouwannabook.herokuapp.com"
 }
