--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "doyouwannabook-v2",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.15.4"
+  },
   "description": "",
   "main": "./src/index.js",
   "type": "module",
