--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "client": "react-scripts start",
     "build": "react-scripts build",
     "server": "nodemon ./server/app.js --ignore sessions/*",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "react-scripts build"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
