--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
+    "start": "node ./server/app.js && react-scripts start",
     "client": "react-scripts start",
-    "build": "react-scripts build",
     "server": "nodemon ./server/app.js --ignore sessions/*",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
