--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "node ./server/app.js && react-scripts start",
     "client": "react-scripts start",
+    "build": "react-scripts build",
     "server": "nodemon ./server/app.js --ignore sessions/*",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -65,7 +66,8 @@
     "socket.io": "^4.3.2",
     "socket.io-client": "^4.3.2",
     "upgrade": "^1.1.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^4.44.2"
   },
   "eslintConfig": {
     "extends": [
