--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "react-scripts --openssl-legacy-provider start",
     "client-build": "react-scripts build",
     "server": "nodemon ./server/app.mjs --ignore sessions/*",
-    "server-build": "parcel ./server/app.mjs",
+    "server-build": "parcel build ./server/app.mjs",
     "build": "react-scripts build && parcel ./server/app.mjs",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -19,50 +19,52 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
-    "concurrently": "^6.2.1",
-    "connect-redis": "^6.0.0",
-    "cookie-parser": "^1.4.5",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "helmet": "^4.6.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
     "hpp": "^0.2.3",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.5.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "mysql2": "^2.3.0",
-    "nodemailer": "^6.6.3",
-    "nodemon": "^2.0.12",
-    "passport": "^0.4.1",
+    "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-qr-barcode-scanner": "^1.0.6",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "4.0.3",
-    "redis": "^3.1.2",
-    "redux": "^4.1.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "react-scripts": "5.0.1",
+    "redis": "^4.6.10",
+    "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.38.1",
-    "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0",
-    "serve": "^13.0.2",
-    "socket.io": "^4.3.2",
-    "socket.io-client": "^4.3.2",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.69.5",
+    "sequelize": "^6.33.0",
+    "sequelize-cli": "^6.6.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "upgrade": "^1.1.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^3.5.0"
   },
   "eslintConfig": {
     "extends": [
@@ -85,7 +87,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "parcel-bundler": "^1.12.5",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.9.1"
+    "serve": "^14.2.1"
   }
 }
