--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "html-webpack-plugin": "^5.5.3",
+    "mariadb": "^3.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^3.6.2",
