--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dropbox": "^10.34.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
