--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.5",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^3.5.0"
   },
   "eslintConfig": {
