--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
     "html-webpack-plugin": "^5.5.3",
+    "http": "^0.0.1-security",
     "mariadb": "^3.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
@@ -34,8 +35,7 @@
     "redis": "^4.6.10",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "ws": "^8.14.2"
   },
   "browserslist": {
     "production": [
