--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,7 @@
     "redis": "^4.6.10",
     "sequelize": "^6.33.0",
     "sequelize-cli": "^6.6.1",
-    "ws": "^8.14.2"
+    "socket.io": "^4.7.2"
   },
   "browserslist": {
     "production": [
